--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					// Bắt đầu edit ở đây
 					context.fillStyle = '#ffffff'; // Màu chữ (trắng)
 					context.font = '60px Imperial Script'; // Kích thước - Font chữ
-					text = 'Ly'; // Tên muốn hiển thị
+					text = 'Hạnh'; // Tên muốn hiển thị
 					context.fillText(text, canvas.width / 2, canvas.height / 2);
 					// Sau phần này đừng edit gì nữa
 
